reworked and refined input mode

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             app:layout_constraintEnd_toStartOf="@+id/backspaceBtn"
             app:layout_constraintStart_toStartOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <com.wegielek.signalychinese.models.ChineseTextInputEditText
                 android:id="@+id/searchTextBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -108,8 +108,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/cameraBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/ic_camera_default"
@@ -119,8 +119,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/settingsBtn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:background="@drawable/ic_settings_default"
