--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -10,11 +10,11 @@
 
   <androidx.appcompat.widget.Toolbar
       android:id="@+id/toolbar"
-      android:layout_width="409dp"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:background="@color/black"
       android:minHeight="?attr/actionBarSize"
-      android:theme="?attr/actionBarTheme"
+      android:theme="@style/Theme.SignalyChinese"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
