--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
 
+    <color name="grey">#333333</color>
+
     <color name="white">#FFFFFFFF</color>
     <color name="writing_background">#131717</color>
     <color name="mistake">#FFB60000</color>
