--- a/app/src/main/res/layout/item_suggested_character_list.xml
+++ b/app/src/main/res/layout/item_suggested_character_list.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:text="ss"
         android:textColor="#FFFFFF"
         android:textSize="34sp" />
 </LinearLayout>
