--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -264,6 +264,17 @@
             app:layout_constraintStart_toStartOf="@+id/cameraIV"
             app:layout_constraintTop_toTopOf="@+id/cameraIV" />
 
+        <Button
+            android:id="@+id/radicalsBackBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_arrow_back_default"
+            android:contentDescription="arrow_back"
+            app:layout_constraintEnd_toEndOf="@+id/radicalsRv"
+            app:layout_constraintTop_toTopOf="@+id/radicalsRv" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
