--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,17 +5,18 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
     <color name="black">#FF000000</color>
-
     <color name="grey">#333333</color>
-
     <color name="white">#FFFFFFFF</color>
-    <color name="writing_background">#131717</color>
+    <color name="canvas_background">#131313</color>
     <color name="mistake">#FFB60000</color>
     <color name="mistake_fade">#00B60000</color>
     <color name="success">#009B19</color>
     <color name="blueish">#3F51B5</color>
     <color name="blues">#2196F3</color>
+    <color name="selection_blue">#0055CC</color>
+    <color name="grid_color">#666666</color>
 
     <color name="pink">#C799F4</color>
 </resources>
