--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/dictionaryListFragment"
-        android:title="Definition"
-        android:icon="@drawable/ic_dictionary_default" />
+    <item
+        android:id="@+id/dictionaryListFragment"
+        android:icon="@drawable/ic_dictionary_default"
+        android:title="@string/definition" />
 
-    <item android:id="@+id/strokesFragment"
-        android:title="Strokes"
-        android:icon="@drawable/ic_draw_default" />
+    <item
+        android:id="@+id/strokesFragment"
+        android:icon="@drawable/ic_draw_default"
+        android:title="@string/strokes" />
 </menu>
