--- a/app/src/main/res/layout/fragment_strokes.xml
+++ b/app/src/main/res/layout/fragment_strokes.xml
@@ -1,61 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-        <com.wegielek.signalychinese.views.LearnStrokesCanvasView
-            android:id="@+id/learnStrokesCanvasView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+    <com.wegielek.signalychinese.views.LearnStrokesCanvasView
+        android:id="@+id/learnStrokesCanvasView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        </com.wegielek.signalychinese.views.LearnStrokesCanvasView>
+    </com.wegielek.signalychinese.views.LearnStrokesCanvasView>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/testBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="Test"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/learnCBtn"
-            app:layout_constraintTop_toBottomOf="@+id/learnStrokesCanvasView" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/testBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="Test"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/learnCBtn"
+        app:layout_constraintTop_toBottomOf="@+id/learnStrokesCanvasView" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/learnCBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Learn"
-            app:layout_constraintEnd_toStartOf="@+id/testBtn"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/presentBtn"
-            app:layout_constraintTop_toBottomOf="@+id/learnStrokesCanvasView" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/learnCBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Learn"
+        app:layout_constraintEnd_toStartOf="@+id/testBtn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/presentBtn"
+        app:layout_constraintTop_toBottomOf="@+id/learnStrokesCanvasView" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/presentBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="Present"
-            app:layout_constraintEnd_toStartOf="@+id/learnCBtn"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/learnStrokesCanvasView" />
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/presentBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Present"
+        app:layout_constraintEnd_toStartOf="@+id/learnCBtn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/learnStrokesCanvasView" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
+</androidx.constraintlayout.widget.ConstraintLayout>
